--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl: ^0.20.2
   liquid_glass_renderer: ^0.1.1-dev.10
+  package_info_plus: ^8.3.0
   font_awesome_flutter: ^10.8.0
   retrofit: ^4.6.0
   json_annotation: ^4.8.0
